# Kumario

./: CMakeLists.txt  README.md
Kumar/: header.h  main.cpp
Kumar/c_utils/: threads.h  utils.c  utils.h  vec.c  vec.h  vec_README.md
cmake/: FindSDL2.cmake
